--- a/space_android/app/build.gradle
+++ b/space_android/app/build.gradle
@@ -15,7 +15,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 21
         versionCode 5
-        versionName "2.0.0"
+        versionName "1.0"
         multiDexEnabled true
     }
     buildTypes {
@@ -85,4 +85,5 @@ dependencies {
     compile files('libs/ShareSDK-Wechat-Core-2.7.10.jar')
     compile files('libs/ShareSDK-Wechat-Favorite-2.7.10.jar')
     compile files('libs/ShareSDK-Wechat-Moments-2.7.10.jar')
+    compile files('libs/zxing.jar')
 }
