--- a/space_android/app/src/main/AndroidManifest.xml
+++ b/space_android/app/src/main/AndroidManifest.xml
@@ -134,6 +134,9 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" />
         <activity
+            android:name=".ui.activity.Share2DCode"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity
             android:name=".ui.activity.UserInfoActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
@@ -211,7 +214,10 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <activity android:name=".ui.activity.RegisterActivity1"
+        <activity
+            android:name=".ui.activity.RegisterActivity1"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.activity.RecommendInfoActivity"
             android:screenOrientation="portrait"
             ></activity>
     </application>
