--- a/space_ios/TeamTalk/Info.plist
+++ b/space_ios/TeamTalk/Info.plist
@@ -91,11 +91,11 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string></string>
+	<string>此 App 需要您的同意才能打开相机</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string></string>
+	<string>此 App 需要您的同意才能打开麦克风</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string></string>
+	<string>此 App 需要您的同意才能读取媒体资料库</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
